refactor: cocktailListRepository deleteByUserIdAndCocktailId에 Transactinal 추가 및 메인 페이지 url 변경
jpql로 update 쿼리 사용시 @modifying 및 @Transactional를 붙이지 않으며 예외 발샘함에 따라 추가

컨트롤러 메서드의 URL을 /main에서 /로 변경하여, 이제 localhost:8080에 접속 시 바로 메인 페이지로 이동할 수 있도록 개선

--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -205,7 +205,7 @@
 </head>
 <body>
 <div class="navbar">
-  <a href="/main">만 개의 칵테일</a>
+  <a th:href="@{/}">만 개의 칵테일</a>
   <div>
     <a href="/popular">인기 칵테일</a>
     <a href="/recommend">추천 칵테일</a>
