--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -140,7 +140,7 @@
 
 <!-- 네비게이션 바 -->
 <div class="navbar">
-  <a href="/main">만 개의 칵테일</a>
+  <a th:href="@{/}">만 개의 칵테일</a>
   <div>
     <a href="/popular">인기 칵테일</a>
     <a href="/recommend">추천 칵테일</a>
