feat: social login

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -125,13 +125,24 @@
             <button type="submit" class="login-btn">로그인</button>
         </div>
 
-        <br><br>
+        <br>
+
+        <div class="social-login">
+            <p>또는 소셜 계정으로 로그인:</p>
+            <a href="/kakao_login">
+                <img src="/images/kakao_login.png" alt="카카오 로그인" style="width:200px; cursor:pointer;">
+            </a>
+        </div>
+
+        <br>
 
         아직 계정이 없으신가요?
         <button type="button" class="user-btn" onclick="goToSignUp()">회원가입</button>
     </div>
 </form>
-</div>
+
+
+
 
 <script>
     document.getElementById("login-form").onsubmit = function(event) {
@@ -185,6 +196,7 @@
                 if (response.flag === 0) {
 
                     console.log('마이 페이지로 이동');
+                    debugger; // 브라우저 디버거 실행
                     window.location.href = '/mypage';
 
                 } else {
