feat: Elastic Search를 통해서 가져온 결과를 검색페이지에 Word Cloud형태로 출력하는 기능 추가
Elastic Search에서 가져온 성별, 연령대별 칵테일 좋아요, 즐겨찾기 빈도수를 통해 칵테일 검색 페이지에 Word Cloud를 그릴 수 있도록 기능 추가

--- a/src/main/resources/static/css/search1.css
+++ b/src/main/resources/static/css/search1.css
@@ -22,6 +22,7 @@ body {
 }
 
 .main-text {
+  font-weight : bold;
   background-color: #dddddd;
   color: #000000;
   text-align: center;
@@ -116,5 +117,23 @@ body {
   width: 100%;
   border-radius: 15px;
   margin: 5px 0;
+  display: block;
+}
+
+.cocktail-word-cloud-title{
+  background-color: #dddddd;
+  color: #000000;
+  text-align: center;
+  padding: 10px 40px;
+  font-size: 30px;
+  width: 50%;
+  border-radius: 15px;
+  margin-bottom: 5px; /* 아래 간격을 좁힘 */
+}
+
+.wordcloud-container {
+  width: 600px; /* 크기를 키워보세요 */
+  margin: 5px;
+  /*border: 1px solid #ccc;*/
   display: block;
 }
